--- a/ClassMapper/ClassMapperTest/packages.config
+++ b/ClassMapper/ClassMapperTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.1.1-preview" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.0.3-preview" targetFramework="net452" />
+  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
 </packages>
