--- a/ClassMapper/ClassMapper/ClassMapper.csproj
+++ b/ClassMapper/ClassMapper/ClassMapper.csproj
@@ -66,7 +66,7 @@
     <Compile Include="IMapper.cs" />
     <Compile Include="Mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SourceDestPair.cs" />
+    <Compile Include="MappingResultPair.cs" />
     <Compile Include="TypeComparator.cs" />
   </ItemGroup>
   <ItemGroup>
